--- a/views/style.sass
+++ b/views/style.sass
@@ -10,7 +10,8 @@ a, a:visited
 h1, h2, h3, h4, h5, h6
   :font-family Georgia, serif
   :font-weight normal
-  :margin 0px 0px 10px 0px
+  :margin 0px 10px 10px 0px
+  :white-space nowrap
 
 h1
   :padding-bottom 10px
@@ -21,7 +22,7 @@ h2
   :text-decoration underline
   
 h4
-  :margin 20px 10px 0px 5px
+  :margin 20px 10px 20px 5px
   :padding 5px
   :background-color #EFEFEF
 
@@ -86,29 +87,10 @@ p
 #footer
   :margin-top 20px
   :clear both
-  :width 100%
   :padding 10px
   :color #AAA
   :text-align left
-  :z-index 9
   :font-family sans-serif
   :text-align center
 
-
-
-#footer_fixed
-  :display none
-  :clear both
-  :position fixed
-  :bottom 0
-  :left 0
-  :width 100%
-  :padding 10px
-  :color #AAA
-  :text-align left
-  :z-index 9
-  :background-color #EFEFEF
-  :border-top 1px solid #CCC
-  :font-family sans-serif
-  :text-align center
 
