--- a/views/style.sass
+++ b/views/style.sass
@@ -22,7 +22,7 @@ h2
   :text-decoration underline
   
 h4
-  :margin 20px 10px 20px 5px
+  :margin 20px 10px 10px 0px
   :padding 5px
   :background-color #EFEFEF
 
@@ -45,13 +45,13 @@ h4
   :border-left 1px solid #DDD
   
   
-#summary-table tr.level5
+#summary-table tr.level4, #summary-table tr.level5
   :background-color #99FF99
 
 #summary-table tr.level3
   :background-color #999933
   
-#summary-table tr.level1
+#summary-table tr.level1, #summary-table tr.level2
   :background-color #DD3333
   
 #summary-table tr.level0
@@ -71,8 +71,12 @@ h4
   :padding-left 5px
   :padding-right 5px
 
+
 #section-table
   :border 0px
+
+#section-table td
+  :vertical-align top
 
 .section
   :margin-bottom 20px
@@ -83,6 +87,7 @@ p
   :font-size 0.7em
   :margin 0px
   :padding 0px
+  :margin-right 10px
 
 #footer
   :margin-top 20px
