--- a/views/main.haml
+++ b/views/main.haml
@@ -9,6 +9,7 @@
       %th 15 min average
       %th Free disk space
       %th Free memory
+      %th Free swap space
     -for host in @hosts
       %tr{:class => "level#{host.status}"}
         %td= host.hostname
@@ -16,8 +17,9 @@
         %td= host.load_5_min
         %td= host.load_10_min
         %td= host.load_15_min
-        %td= "#{host.available_disk_space_in_Gb}Gb out of #{host.total_disk_space_in_Gb}Gb (#{sprintf('%.2f', host.available_disk_space_percent)}%)" if host.available_disk_space_percent
-        %td= "#{host.available_memory_in_Mb}Mb out of #{host.total_memory_in_Mb}Mb (#{sprintf('%.2f', host.available_memory_in_Mb / host.total_memory_in_Mb * 100)}%)" if host.total_memory_in_Mb > 0
+        %td= "#{host.available_disk_space_in_Gb}Gb out of #{host.total_disk_space_in_Gb}Gb (#{sprintf('%.2f', (host.available_disk_space_in_Gb.to_f / host.total_disk_space_in_Gb) * 100)}%)" if host.available_disk_space_percent
+        %td= "#{host.available_memory_in_Mb}Mb out of #{host.total_memory_in_Mb}Mb (#{sprintf('%.2f', (host.available_memory_in_Mb.to_f / host.total_memory_in_Mb) * 100)}%)" if host.total_memory_in_Mb > 0
+        %td= "#{host.available_swap_in_Mb}Mb out of #{host.total_swap_in_Mb}Mb (#{sprintf('%.2f', (host.available_swap_in_Mb.to_f / host.total_swap_in_Mb) * 100)}%)" if host.total_swap_in_Mb > 0
       
 
 
@@ -28,27 +30,37 @@
       - params_for_6h = "cht=lc&chs=350x120&chco=FF0000,00FF00,0000FF&chm=r,DDDDDD,0,0.2,0.21&chxt=x,y&chxr=1,0,4,1&chds=0,4&chl=&chd=t:#{series_6h[1].join(",")}|#{series_6h[2].join(",")}|#{series_6h[3].join(",")}"
       - series_24h = host.loads_15_min_grain(@start_24h_ago, @end_now)
       - params_for_24h = "cht=lc&chs=350x120&chco=FF0000,00FF00,0000FF&chm=r,DDDDDD,0,0.2,0.21&chxt=x,y&chxr=1,0,4,1&chds=0,4&chl=&chd=t:#{series_24h[1].join(",")}|#{series_24h[2].join(",")}|#{series_24h[3].join(",")}"
-      - mem_series_24h = host.mems_15_min_grain(@start_24h_ago, @end_now)
+      - mem_series_24h = host.memory_stats_15_min_grain(@start_24h_ago, @end_now)
       - mem_params_for_24h = "cht=lc&chs=350x120&chco=FF0000,00FF00,0000FF&chm=r,DDDDDD,0,0.95,0.96&chxr=1,0,#{host.total_memory_in_Mb * 1.05}&chxt=x,y&chl=&chds=0,#{host.total_memory_in_Mb * 1.05}&chd=t:#{mem_series_24h[2].join(",")}"
+      - swap_params_for_24h = "cht=lc&chs=350x120&chco=FF0000,00FF00,0000FF&chm=r,DDDDDD,0,0.95,0.96&chxr=1,0,#{host.total_swap_in_Mb * 1.05}&chxt=x,y&chl=&chds=0,#{host.total_swap_in_Mb * 1.05}&chd=t:#{mem_series_24h[4].join(",")}"
       %td
         .section
           %h2=host.hostname
           %p== Last heard from on #{host.last_contacted_on}
+          
           %h4 Load averages for the last 24 hours
           %img{ :src => "http://chart.apis.google.com/chart?#{params_for_24h}"}
+          
           %h4 Load averages for the last 6 hours
           %img{ :src => "http://chart.apis.google.com/chart?#{params_for_6h}"}
+          
           %h4 Memory
           %p{:style => "float:right;"}== Total memory is #{host.total_memory_in_Mb}Mb
-          %br{:style=>"clear:both;"}
+          %br
           %img{ :src => "http://chart.apis.google.com/chart?#{mem_params_for_24h}"}
+          
+          %h4 Swap
+          %p{:style => "float:right;"}== Total memory is #{host.total_swap_in_Mb}Mb
+          %br
+          %img{ :src => "http://chart.apis.google.com/chart?#{swap_params_for_24h}"}
+          
           - host.file_systems.each do |fs|
             - if fs.is_dev? and fs.size_in_Gb > 0
               - series_24h = fs.disks_15_min_grain(@start_24h_ago, @end_now)
               - params_for_24h = "cht=lc&chs=350x120&chco=FF0000,00FF00,0000FF&chxr=1,0,#{fs.size_in_Gb * 1.05}&chxt=x,y&chds=0,#{fs.size_in_Gb * 1.05}&chl=&chd=t:#{series_24h[2].join(",")}"
               %h4== #{fs.mounted_on} on #{fs.name}
               %p{:style => "float:right;"}== Device size is #{fs.size_in_Gb}Gb
-              %br{:style=>"clear:both;"}
+              %br
               %img{ :src => "http://chart.apis.google.com/chart?#{params_for_24h}"}
 
           
