Added new gemspec. Cleaned up templates

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,9 +3,6 @@
   %head
     %title dog not god
     %link{:rel=>'stylesheet', :href=>'/stylesheets/style.css', :type => "text/css"}
-    %script{:src => "http://www.google.com/jsapi"}
-    %script google.load("jquery", "1");
-    %script{:src => "/javascripts/flot/jquery.flot.pack.js"}
 
   
   %body
@@ -15,7 +12,7 @@
       =yield
     #footer
       %p 
-        %a{ :href => "http://github.com/luiscorreadalmeida/dog" } dog not god
+        %a{ :href => "http://github.com/spoosix/dognotgod" } dog not god
         is released under the 
         %a{ :href => "http://www.gnu.org/licenses/gpl.html" } GPL license
       
