--- a/views/main.haml
+++ b/views/main.haml
@@ -1,6 +1,6 @@
 %h2 Summary
 #summary-section
-  %table{:id => "summary-table", :cellspacing => 0, :cellpading => 0}
+  %table{:class => "summary-table", :cellspacing => 0, :cellpading => 0}
     %tr
       %th Host
       %th Last heartbeat
