--- a/views/style.sass
+++ b/views/style.sass
@@ -43,34 +43,34 @@ h4
   :padding-bottom 20px
   :border-bottom 1px solid #DDD
 
-#summary-table
+// summary-table
+
+.summary-table
   :border-top 1px solid #DDD
   :border-left 1px solid #DDD
   
-  
-#summary-table tr.level4, #summary-table tr.level5
+.summary-table tr.level4, .summary-table tr.level5
   :background-color #99FF99
 
-#summary-table tr.level3
+.summary-table tr.level3
   :background-color #999933
   
-#summary-table tr.level1, #summary-table tr.level2
+.summary-table tr.level1, .summary-table tr.level2
   :background-color #DD3333
   
-#summary-table tr.level0
+.summary-table tr.level0
   :background-color #EFEFEF
   
-#summary-table th, #summary-table td
+.summary-table th, #summary-table td
   :border-bottom 1px solid #DDD  
   :border-right 1px solid #DDD
-  
 
-#summary-table th
+.summary-table th
   :background-color #EFEFEF
   :padding-left 15px
   :padding-right 15px
 
-#summary-table td
+.summary-table td
   :padding-left 5px
   :padding-right 5px
 
