--- a/views/layout.haml
+++ b/views/layout.haml
@@ -8,7 +8,7 @@
   %body
     #header
     #content
-      %h1 dog not god
+      %h1="dog not god <br/><span style='font-size: 0.4em'>server health monitoring simplified</span>"
       =yield
     #footer
       %p 
