--- a/views/main.haml
+++ b/views/main.haml
@@ -1,21 +1,23 @@
 %h2 Summary
 
 #summary-section
-  %table{:class => "summary-table", :cellspacing => 0, :cellpading => 0}
+  %table.summary-table{:cellspacing => 0, :cellpading => 0}
     %tr
       %th Host
       %th Last heartbeat
       %th 5 min average
-      %th 10 min average
-      %th 15 min average
+      %th 10 min
+      %th 15 min
       %th Free disk space
       %th Free memory
       %th Free swap space
     -for host in @hosts
+      - series_6h = host.loads_5_min_grain(@start_6h_ago, @end_now)
+      - params_for_6h = "cht=ls&chs=100x20&chco=999999&chds=0,#{series_6h[1].max}&chd=t:#{series_6h[1].join(",")}"
       %tr
         %td{:class => "status#{host.status}"}= host.hostname
         %td.distance-in-secs{:class => "status#{host.status}"}= "#{host.distance_to_last_heartbeat_in_seconds.to_i} seconds ago" unless host.status == 0
-        %td.load= host.load_5_min
+        %td.load{:style => "background: url(http://chart.apis.google.com/chart?#{params_for_6h}) no-repeat 5px 12px"}=host.load_5_min
         %td.load= host.load_10_min
         %td.load= host.load_15_min
         %td
@@ -25,44 +27,3 @@
         %td
           %span.bar{:class => "status#{host.swap_status}", :style => "width: #{host.available_swap_in_percent.to_i}"}= "#{host.available_swap_in_percent}%" if host.total_swap_in_Mb > 0
 
-%table{:id => "section-table"}
-  %tr
-    -for host in @hosts
-      - series_6h = host.loads_5_min_grain(@start_6h_ago, @end_now)
-      - params_for_6h = "cht=lc&chs=350x120&chco=FF0000,00FF00,0000FF&chm=r,DDDDDD,0,0.2,0.21&chxt=x,y&chxr=1,0,4,1&chds=0,4&chl=&chd=t:#{series_6h[1].join(",")}|#{series_6h[2].join(",")}|#{series_6h[3].join(",")}"
-      - series_24h = host.loads_15_min_grain(@start_24h_ago, @end_now)
-      - params_for_24h = "cht=lc&chs=350x120&chco=FF0000,00FF00,0000FF&chm=r,DDDDDD,0,0.2,0.21&chxt=x,y&chxr=1,0,4,1&chds=0,4&chl=&chd=t:#{series_24h[1].join(",")}|#{series_24h[2].join(",")}|#{series_24h[3].join(",")}"
-      - mem_series_24h = host.memory_stats_15_min_grain(@start_24h_ago, @end_now)
-      - mem_params_for_24h = "cht=lc&chs=350x120&chco=FF0000,00FF00,0000FF&chm=r,DDDDDD,0,0.95,0.96&chxr=1,0,#{host.total_memory_in_Mb * 1.05}&chxt=x,y&chl=&chds=0,#{host.total_memory_in_Mb * 1.05}&chd=t:#{mem_series_24h[2].join(",")}"
-      - swap_params_for_24h = "cht=lc&chs=350x120&chco=FF0000,00FF00,0000FF&chm=r,DDDDDD,0,0.95,0.96&chxr=1,0,#{host.total_swap_in_Mb * 1.05}&chxt=x,y&chl=&chds=0,#{host.total_swap_in_Mb * 1.05}&chd=t:#{mem_series_24h[4].join(",")}"
-      %td
-        .section
-          %h3=host.hostname
-          %p== Last heard from on #{host.last_contacted_on}          
-          
-          %h4.load Load averages for the last 24 hours
-          %img{ :src => "http://chart.apis.google.com/chart?#{params_for_24h}"}
-          
-          %h4.load Load averages for the last 6 hours
-          %img{ :src => "http://chart.apis.google.com/chart?#{params_for_6h}"}
-          
-          %h4.memory Memory
-          %p{:style => "float:right;"}== Total memory is #{host.total_memory_in_Mb}Mb
-          %br
-          %img{ :src => "http://chart.apis.google.com/chart?#{mem_params_for_24h}"}
-          
-          %h4.swap Swap
-          %p{:style => "float:right;"}== Total memory is #{host.total_swap_in_Mb}Mb
-          %br
-          %img{ :src => "http://chart.apis.google.com/chart?#{swap_params_for_24h}"}
-          
-          - host.file_systems.each do |fs|
-            - if fs.is_dev? and fs.size_in_Gb > 0
-              - series_24h = fs.disks_15_min_grain(@start_24h_ago, @end_now)
-              - params_for_24h = "cht=lc&chs=350x120&chco=FF0000,00FF00,0000FF&chxr=1,0,#{fs.size_in_Gb * 1.05}&chxt=x,y&chds=0,#{fs.size_in_Gb * 1.05}&chl=&chd=t:#{series_24h[2].join(",")}"
-              %h4.disk== #{fs.mounted_on} on #{fs.name}
-              %p{:style => "float:right;"}== Device size is #{fs.size_in_Gb}Gb
-              %br
-              %img{ :src => "http://chart.apis.google.com/chart?#{params_for_24h}"}
-
-          
