--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,6 +3,9 @@
   %head
     %title dog not god
     %link{:rel=>'stylesheet', :href=>'/stylesheets/style.css', :type => "text/css"}
+    %script{:src => "http://www.google.com/jsapi"}
+    %script google.load("jquery", "1");
+    %script{:src => "/javascripts/jquery.simplemodal-1.2.3.min.js"}
 
   
   %body
