--- a/views/style.sass
+++ b/views/style.sass
@@ -43,9 +43,10 @@ h3
   
 h4
   :padding 10px 0px 10px 40px
-  :margin 2px 0px 3px 20px
+  :margin 2px 10px 3px 20px
   :border-top 1px solid #DDD
   :border-left 1px solid #DDD
+  :border-right 1px solid #DDD
   :border-bottom 1px solid #555
   
 h4.load
@@ -54,9 +55,11 @@ h4.load
   
 h4.memory, h4.swap
   :background url(/images/blossom/32x32/chart.png) no-repeat
+  :background-color #EFEFEF
   
 h4.disk
   :background url(/images/blossom/32x32/hard_disk.png) no-repeat
+  :background-color #EFEFEF  
 
 
 #header
@@ -67,6 +70,10 @@ h4.disk
 
 #content
   :margin 0px 30px 10px 20px
+  
+#content-lightbox
+  :padding 10px 50px
+  :margin 10px auto
 
 #summary-section
   :font-size 0.7em
@@ -86,6 +93,12 @@ h4.disk
 
 .summary-table tr
   :height 35px
+  
+.summary-table tr.link
+  :cursor pointer
+  
+.summary-table tr.link:hover
+  :background-color #FFFFEF
   
 .summary-table th, #summary-table td
   :border-bottom 1px solid #DDD  
@@ -136,8 +149,8 @@ h4.disk
   :position relative
   :text-align center
   :color #000
-  :height 2.2em
-  :line-height 2.2em
+  :height 1.7em
+  :line-height 1.5em
   :font-size 0.9em
 
 .summary-table span.status1
@@ -154,6 +167,76 @@ h4.disk
   :padding-top 5px
 
 
+/*****
+
+
+.detail-table
+  :border-top 1px solid #DDD
+  :border-left 1px solid #DDD
+  :font-size 0.7em
+  :margin 20px 20px 0px 20px
+  :width 100%
+
+.detail-table tr
+  :height 25px
+  
+.detail-table th, #summary-table td
+  :border-bottom 1px solid #DDD  
+  :border-right 1px solid #DDD
+
+.detail-table th
+  :background-color #EFEFEF
+  :padding-left 15px
+  :padding-right 15px
+
+.detail-table td
+  :padding-left 5px
+  :padding-right 5px
+  :border-bottom 1px solid #DDD  
+  :border-right 1px solid #DDD
+  
+.detail-table td.status3
+  :background url(/images/coquette/24x24/red_button.png) no-repeat 8px 5px
+  :padding 0px 0px 0px 40px
+  :margin 0px 0px 0px 5px
+
+.detail-table td.status2
+  :background url(/images/coquette/24x24/yellow_button.png) no-repeat 8px 5px
+  :padding 0px 0px 0px 40px
+  :margin 0px 0px 0px 5px
+
+.detail-table td.status1
+  :background url(/images/coquette/24x24/green_button.png) no-repeat 8px 5px
+  :padding 0px 0px 0px 40px
+  :margin 0px 0px 0px 5px
+
+.detail-table td.space
+  :text-align right
+  :padding-right 5px
+
+.detail-table span.bar
+  :display block
+  :position relative
+  :text-align center
+  :color #000
+  :height 1.7em
+  :line-height 1.5em
+  :font-size 0.9em
+
+.detail-table span.status1
+  :background-color #99DD00
+  
+.detail-table span.status2
+  :background-color #FFAA00
+
+.detail-table span.status3
+  :background-color #CC0000 
+
+
+.detail-table img.sparkline
+  :padding-top 5px
+
+
 
 
 #section-table
@@ -167,18 +250,17 @@ h4.disk
   :padding 0px
   :margin 0px
   :margin-bottom 20px
-  :border 1px solid #DDD
   :width 100%
   
 .section p
-  :padding 0px 0px 10px 0px
-  :margin 0px 20px 20px 0px
+  :padding 0px 5px 10px 0px
+  :margin 0px 0px 20px 0px
   :color #333
   :font-size 0.6em
   :float right
   
 .section img
-  :margin 10px 10px 20px 30px
+  :margin 10px 40px 0px 30px
 
 
 //************************************************************
@@ -196,3 +278,25 @@ h4.disk
 
 #footer a
   :color #666
+
+// **
+
+#simplemodal-overlay
+  :background-color #000
+  :cursor wait
+
+#simplemodal-container
+  :height 550px
+  :width 800px
+  :background-color #FFF
+
+#simplemodal-container a.modalCloseImg
+  :background url(/images/blossom/32x32/delete_item.png) no-repeat
+  :width 32px
+  :height 32px
+  :display inline
+  :z-index 3200
+  :position absolute
+  :top -14px
+  :right -18px
+  :cursor pointer
