--- a/views/style.sass
+++ b/views/style.sass
@@ -76,7 +76,7 @@ h4.disk
   :margin 10px auto
 
 #summary-section
-  :font-size 0.7em
+  :font-size 0.8em
   :margin-bottom 30px
   :padding-bottom 20px
   :border-bottom 1px solid #DDD
@@ -89,7 +89,6 @@ h4.disk
   :border-top 1px solid #DDD
   :border-left 1px solid #DDD
   :width 100%
-  :font-size 1.1em
 
 .summary-table tr
   :height 35px
@@ -167,8 +166,9 @@ h4.disk
   :padding-top 5px
 
 
-/*****
 
+//************************************************************
+// detail-table
 
 .detail-table
   :border-top 1px solid #DDD
@@ -237,7 +237,8 @@ h4.disk
   :padding-top 5px
 
 
-
+//************************************************************
+// section-table
 
 #section-table
   :border 0px
@@ -253,7 +254,7 @@ h4.disk
   :width 100%
   
 .section p
-  :padding 0px 5px 10px 0px
+  :padding 0px 15px 10px 0px
   :margin 0px 0px 20px 0px
   :color #333
   :font-size 0.6em
@@ -279,7 +280,9 @@ h4.disk
 #footer a
   :color #666
 
-// **
+
+//************************************************************
+// lightbox
 
 #simplemodal-overlay
   :background-color #000
@@ -289,6 +292,7 @@ h4.disk
   :height 550px
   :width 800px
   :background-color #FFF
+  :border 5px solid #666
 
 #simplemodal-container a.modalCloseImg
   :background url(/images/blossom/32x32/delete_item.png) no-repeat
